--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ app.secret-key=${TOKEN_SECRET:s/4KMb61LOrMYYAn4rfaQYSgr+le5SMrsMzKw8G6bXc=}
 app.token-expiration =1800 
 app.token-issuer=dat.kea
 
+server.error.include-message=always
 
