--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,9 @@ app.token-expiration =1800
 app.token-issuer=dat.kea
 
 server.error.include-message=always
+leak.detector.threshold=45000
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.com.zaxxer.hikari.pool.HikariPool=DEBUG
+
+
 
