--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,11 @@ app.token-issuer=dat.kea
 
 server.error.include-message=always
 
+
+spring.datasource.hikari.max-lifetime=300000 
+spring.datasource.hikari.idle-timeout=30000
+
+
 #leak.detector.threshold=45000
 #logging.level.com.zaxxer.hikari=DEBUG
 #logging.level.com.zaxxer.hikari.pool.HikariPool=DEBUG
