--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,8 @@ app.token-issuer=dat.kea
 
 server.error.include-message=always
 
-
+#These value are NOT meant for a real-life production environment
+#They should help to eliminate some of the problems you might encounter when using Azure free F1 plan with a MySQL database running in a Docker container
 spring.datasource.hikari.max-lifetime=300000 
 spring.datasource.hikari.idle-timeout=30000
 
